@@ -49,6 +49,8 @@ Changelog
 4.1.6
     - [Bugfix] Link to the documentation of the debug preset does not work anymore in the documentation.
     - [Bugfix] Added the missing path filter to the EXT: path resolver.
+    - [Bugfix] Use strict encoding detection for strings for more reliable results.
+    - [Bugfix] Fetch traversable data as soon as possible, because we do not want other analysis methods fetch traversable results, that are only fetchable once. DB results are a good example for this.
 
 4.1.5
     - [Feature] Aimeos 2022 support
